WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41162
[GTK] Cannot change the selection via the keyboard
https://bugs.webkit.org/show_bug.cgi?id=41162
Summary
[GTK] Cannot change the selection via the keyboard
Martin Robinson
Reported
2010-06-24 09:17:08 PDT
After selecting some text in a non-editable area, it should be possible to change the selection by holding down the shift key and arrow keys. This doesn't work in the GTK+ port.
Attachments
Fix for this issue
(4.12 KB, patch)
2010-06-24 10:58 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-06-24 10:58:50 PDT
Created
attachment 59679
[details]
Fix for this issue
Xan Lopez
Comment 2
2010-06-24 13:49:03 PDT
Comment on
attachment 59679
[details]
Fix for this issue So we are changing the logic a bit here, before we were allowing all kinds of events if caret mode was enabled. Are you changing that on purpose?
Martin Robinson
Comment 3
2010-06-24 14:49:41 PDT
Yes. Before we were only allowing editor commands: 1. If the node was editable. 2. If caret browsing was enabled. This patch enables editor commands: 1. If the commands don't insert text (includes all caret browsing commands, AFAIK). 2. The command inserts text and the node is editable. I think this new logic is more precise. The only change that I can see is that previously a caret browsing command that inserted text (if such a beast existed) could operate on a non-editable node. I think disallowing that is a better behavior here.
Xan Lopez
Comment 4
2010-06-24 15:07:57 PDT
(In reply to
comment #3
)
> Yes. Before we were only allowing editor commands: > > 1. If the node was editable. > 2. If caret browsing was enabled. > > This patch enables editor commands: > > 1. If the commands don't insert text (includes all caret browsing commands, AFAIK). > 2. The command inserts text and the node is editable. > > I think this new logic is more precise. The only change that I can see is that previously a caret browsing command that inserted text (if such a beast existed) could operate on a non-editable node. I think disallowing that is a better behavior here.
Right, this is how I understood the patch but wanted to double-check it was intentional. I don't think there's such a thing as a text inserting caret command, no :)
Xan Lopez
Comment 5
2010-06-24 15:08:12 PDT
Comment on
attachment 59679
[details]
Fix for this issue r=me
Martin Robinson
Comment 6
2010-06-24 17:29:40 PDT
Comment on
attachment 59679
[details]
Fix for this issue Clearing flags on attachment: 59679 Committed
r61808
: <
http://trac.webkit.org/changeset/61808
>
Martin Robinson
Comment 7
2010-06-24 17:29:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug